bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:1: error: ';' expected but ')' found.
def nearHundred(n:Int): Boolean = {return((Math.abs(100-n))<11 )||(Math.abs(200-n))<11))}
                                                                                      ^